--- a/package.json
+++ b/package.json
@@ -4,44 +4,61 @@
   "description": "My dashboard for all things health.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "webpack-dev-server --content-base public --inline --hot"
+    "watch": "nodemon server.js",
+    "postinstall": "bower install && gulp build"
+  },
+  "babel": {
+    "presets": ["es2015", "react"]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/as577/healthfrontx.git"
+  },
+  "dependencies": {
+    "async": "^1.5.0",
+    "body-parser": "^1.14.1",
+    "colors": "^1.1.2",
+    "compression": "^1.6.0",
+    "express": "^4.13.3",
+    "history": "^1.13.0",
+    "mongoose": "^4.2.5",
+    "morgan": "^1.6.1",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-router": "^1.0.0",
+    "request": "^2.65.0",
+    "serve-favicon": "^2.3.0",
+    "swig": "^1.4.2",
+    "underscore": "^1.8.3",
+    "xml2js": "^0.4.15",
+    "babel-core": "^6.1.19",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-register": "^6.3.13",
+    "babelify": "^7.2.0",
+    "bower": "^1.6.5",
+    "browserify": "^12.0.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-if": "^2.0.0",
+    "gulp-less": "^3.0.3",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.0"
+  },
+  "devDependencies": {
   },
   "author": "Aditya Srinivasan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/as577/healthfrontx/issues"
   },
-  "homepage": "https://github.com/as577/healthfrontx#readme",
-  "dependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "body-parser": "^1.15.2",
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "^1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.1",
-    "express": "^4.14.0",
-    "mongodb": "^2.2.5",
-    "react": "^15.3.0",
-    "react-addons-update": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-router": "^2.6.1",
-    "webpack": "^1.13.1"
-  }
+  "homepage": "https://github.com/as577/healthfrontx#readme"
 }
