--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "postinstall": "bower install && gulp build"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "repository": {
     "type": "git",
@@ -25,13 +28,16 @@
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
     "react": "^0.14.2",
+    "react-burger-menu": "^1.10.4",
     "react-dom": "^0.14.2",
     "react-router": "^1.0.0",
     "request": "^2.65.0",
     "serve-favicon": "^2.3.0",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.15",
+    "xml2js": "^0.4.15"
+  },
+  "devDependencies": {
     "babel-core": "^6.1.19",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
@@ -52,8 +58,6 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.0"
-  },
-  "devDependencies": {
   },
   "author": "Aditya Srinivasan",
   "license": "MIT",
