--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "^0.14.2",
     "react-burger-menu": "^1.10.4",
     "react-dom": "^0.14.2",
+    "react-highcharts": "^10.0.0",
     "react-router": "^1.0.0",
+    "react-select-box": "^3.0.1",
     "request": "^2.65.0",
     "serve-favicon": "^2.3.0",
     "swig": "^1.4.2",
