--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
     "serve-favicon": "^2.3.0",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "xml2js": "^0.4.15"
-  },
-  "devDependencies": {
+    "xml2js": "^0.4.15",
     "babel-core": "^6.1.19",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
@@ -60,6 +58,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.0"
+  },
+  "devDependencies": {
   },
   "author": "Aditya Srinivasan",
   "license": "MIT",
